--- a/src/KNN.ipynb
+++ b/src/KNN.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,8 @@
      "output_type": "stream",
      "text": [
       "average_precision: 0.044932671863926514\n",
-      "average_recall: 0.0777699031419795\n"
+      "average_recall: 0.0777699031419795\n",
+      "HitRate: 0.21100917431192662\n"
      ]
     }
    ],
@@ -691,6 +692,7 @@
     "\n",
     "all_precisions = []\n",
     "all_recalls = []\n",
+    "hitCount = 0\n",
     "\n",
     "for user in over_10_users:\n",
     "    user_test_X = test_X[test_X['user_id'] == user]\n",
@@ -702,17 +704,20 @@
     "    \n",
     "    if not actual_Y.empty and not predict_Y.empty:\n",
     "        hit = len(set(actual_Y['app_id']) & set(predict_Y['app_id']))\n",
+    "        if hit > 0:\n",
+    "            hitCount += 1\n",
     "        precision = hit / len(predict_Y['app_id'])\n",
     "        recall = hit / len(actual_Y['app_id'])\n",
     "        all_precisions.append(precision)\n",
     "        all_recalls.append(recall)\n",
     "            \n",
-    "\n",
     "average_precision = sum(all_precisions) / len(all_precisions)\n",
     "average_recall = sum(all_recalls) / len(all_recalls)\n",
+    "HitRate = hitCount / len(over_10_users)\n",
     "\n",
-    "print(\"average_precision:\" , average_precision)\n",
-    "print(\"average_recall:\", average_recall)"
+    "print(\"average_precision:\", average_precision)\n",
+    "print(\"average_recall:\", average_recall)\n",
+    "print(\"HitRate:\", HitRate)"
    ]
   }
  ],
