--- a/src/SVD.ipynb
+++ b/src/SVD.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -764,13 +764,15 @@
      "output_type": "stream",
      "text": [
       "average_precision: 0.05806680881307742\n",
-      "average_recall: 0.20172437134057608\n"
+      "average_recall: 0.20172437134057608\n",
+      "HitRate: 0.49047282992237123\n"
      ]
     }
    ],
    "source": [
     "all_precisions = []\n",
     "all_recalls = []\n",
+    "hitCount = 0\n",
     "\n",
     "for user in over_10_users:\n",
     "    user_test_X = test_X[test_X['user_id'] == user]\n",
@@ -781,6 +783,8 @@
     "        \n",
     "    if not actual_Y.empty and not predict_Y.empty:\n",
     "        hit = len(set(actual_Y['title']) & set(predict_Y['title']))\n",
+    "        if hit > 0:\n",
+    "            hitCount += 1\n",
     "        precision = hit / len(predict_Y['title'])\n",
     "        recall = hit / len(actual_Y['title'])\n",
     "        all_precisions.append(precision)\n",
@@ -789,9 +793,11 @@
     "\n",
     "average_precision = sum(all_precisions) / len(all_precisions)\n",
     "average_recall = sum(all_recalls) / len(all_recalls)\n",
+    "HitRate = hitCount / len(over_10_users)\n",
     "\n",
-    "print(\"average_precision:\" , average_precision)\n",
-    "print(\"average_recall:\", average_recall)"
+    "print(\"average_precision:\", average_precision)\n",
+    "print(\"average_recall:\", average_recall)\n",
+    "print(\"HitRate:\", HitRate)"
    ]
   }
  ],
