--- a/src/item_based.ipynb
+++ b/src/item_based.ipynb
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1213,13 +1213,15 @@
      "output_type": "stream",
      "text": [
       "average_precision: 0.06784953867991535\n",
-      "average_recall: 0.11655006928250378\n"
+      "average_recall: 0.11655006928250378\n",
+      "HitRate: 0.31545518701482006\n"
      ]
     }
    ],
    "source": [
     "all_precisions = []\n",
     "all_recalls = []\n",
+    "hitCount = 0\n",
     "\n",
     "for user in over_10_users:\n",
     "    user_test_X = test_X[test_X['user_id'] == user]\n",
@@ -1230,6 +1232,8 @@
     "        \n",
     "    if not actual_Y.empty and not predict_Y.empty:\n",
     "        hit = len(set(actual_Y['title']) & set(predict_Y['title']))\n",
+    "        if hit > 0:\n",
+    "            hitCount += 1\n",
     "        precision = hit / len(predict_Y['title'])\n",
     "        recall = hit / len(actual_Y['title'])\n",
     "        all_precisions.append(precision)\n",
@@ -1238,9 +1242,11 @@
     "\n",
     "average_precision = sum(all_precisions) / len(all_precisions)\n",
     "average_recall = sum(all_recalls) / len(all_recalls)\n",
+    "HitRate = hitCount / len(over_10_users)\n",
     "\n",
-    "print(\"average_precision:\" , average_precision)\n",
-    "print(\"average_recall:\", average_recall)"
+    "print(\"average_precision:\", average_precision)\n",
+    "print(\"average_recall:\", average_recall)\n",
+    "print(\"HitRate:\", HitRate)"
    ]
   }
  ],
