code refactor for ppt

--- a/src/KNN.ipynb
+++ b/src/KNN.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -191,9 +191,13 @@
     }
    ],
    "source": [
-    "# 데이터셋 로드 및 불필요한 column 제거\n",
+    "# import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "# Load the data\n",
     "data = pd.read_csv('../datasets/merged_steam_games_.csv')\n",
@@ -223,17 +227,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       app_id  date_release  win  mac  linux  rating  positive_ratio  \\\n",
+      "0      552520    1522022400    1    0      0       7              80   \n",
+      "815    242760    1525046400    1    0      0       8              95   \n",
+      "2093   444200    1478649600    1    1      0       7              80   \n",
+      "2187   255710    1425945600    1    1      1       7              93   \n",
+      "2725      220    1191974400    1    1      1       8              97   \n",
+      "...       ...           ...  ...  ...    ...     ...             ...   \n",
+      "42719  427520    1597363200    1    1      1       8              96   \n",
+      "43254  814380    1553126400    1    0      0       8              95   \n",
+      "43938  945360    1542326400    1    0      0       7              92   \n",
+      "45411  477160    1469145600    1    1      0       7              94   \n",
+      "45819  250900    1415059200    1    1      1       8              97   \n",
+      "\n",
+      "       user_reviews  price_final  price_original  ...  RPG  Indie  \\\n",
+      "0            129943        60.00            0.00  ...    0      0   \n",
+      "815          416113        20.00            0.00  ...    0      1   \n",
+      "2093         131334         0.00            0.00  ...    0      0   \n",
+      "2187         178458        30.00            0.00  ...    0      0   \n",
+      "2725         122230         9.99            9.99  ...    0      0   \n",
+      "...             ...          ...             ...  ...  ...    ...   \n",
+      "42719        134384        35.00            0.00  ...    0      1   \n",
+      "43254        176988        60.00            0.00  ...    0      0   \n",
+      "43938        587821         3.00            0.00  ...    0      0   \n",
+      "45411        145616        20.00            0.00  ...    0      1   \n",
+      "45819        225815        15.00            0.00  ...    0      0   \n",
+      "\n",
+      "       Software Training  Simulation  Game Development  Massively Multiplayer  \\\n",
+      "0                      0           0                 0                      0   \n",
+      "815                    0           1                 0                      0   \n",
+      "2093                   0           0                 0                      1   \n",
+      "2187                   0           1                 0                      0   \n",
+      "2725                   0           0                 0                      0   \n",
+      "...                  ...         ...               ...                    ...   \n",
+      "42719                  0           1                 0                      0   \n",
+      "43254                  0           0                 0                      0   \n",
+      "43938                  0           0                 0                      0   \n",
+      "45411                  0           0                 0                      0   \n",
+      "45819                  0           0                 0                      0   \n",
+      "\n",
+      "       Early Access  Nudity  Strategy  Violent  \n",
+      "0                 0       0         0        0  \n",
+      "815               0       0         0        0  \n",
+      "2093              0       0         0        0  \n",
+      "2187              0       0         1        0  \n",
+      "2725              0       0         0        0  \n",
+      "...             ...     ...       ...      ...  \n",
+      "42719             1       0         1        0  \n",
+      "43254             0       0         0        0  \n",
+      "43938             0       0         0        0  \n",
+      "45411             0       0         0        0  \n",
+      "45819             0       0         0        0  \n",
+      "\n",
+      "[74 rows x 50 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 데이터셋에서 게임 데이터 분할\n",
+    "# Extract recommendation columns from dataset\n",
     "recommend_columns = ['app_id','helpful', 'funny', 'date', 'is_recommended', 'hours',\n",
     "       'user_id']\n",
     "\n",
     "recommend_datas = data[recommend_columns]\n",
     "\n",
-    "game_infos = data.drop(recommend_columns[1:], axis=1)"
+    "game_infos = data.drop(recommend_columns[1:], axis=1)\n",
+    "scaled_data = game_infos.copy()\n",
+    "unique_values = ids['app_id'].unique()\n",
+    "index_positions = [ids[ids['app_id'] == value].index[0] for value in unique_values]\n",
+    "print(game_infos.iloc[index_positions])"
    ]
   },
   {
@@ -245,28 +313,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[552520 242760 444200 255710    220 594650 582010    550 271590 294100\n",
-      " 107410 292030 105600 438100 252490    570 377160  22380 239140 812140\n",
-      " 632360 221100 270880 251570 289070 238960 108600 548430 367520    730\n",
-      " 264710 646570 275850 230410 413150 359550 218620 435150    620 648800\n",
-      " 518790 444090 960090   4000 489830 381210 311210 374320  12210    240\n",
-      "    440  48700  49520 203160 227300 236390 262060 284160 291550 304930\n",
-      " 306130 319630 322330 346110 379720 391540 394360 578080 431960 427520\n",
-      " 814380 945360 477160 250900]\n"
+      "      app_id  date_release  win  mac  linux  rating  positive_ratio  \\\n",
+      "0     552520      0.729471    1    0      0       7       -1.339144   \n",
+      "815   242760      0.758106    1    0      0       8        0.611578   \n",
+      "2093  444200      0.318765    1    1      0       7       -1.339144   \n",
+      "2187  255710     -0.180300    1    1      1       7        0.351481   \n",
+      "2725     220     -2.395823    1    1      1       8        0.871674   \n",
+      "\n",
+      "      user_reviews  price_final  price_original  ...  RPG  Indie  \\\n",
+      "0        -0.360355     2.494874       -0.228311  ...    0      0   \n",
+      "815      -0.046625    -0.006719       -0.228311  ...    0      1   \n",
+      "2093     -0.358830    -1.257515       -0.228311  ...    0      0   \n",
+      "2187     -0.307168     0.618679       -0.228311  ...    0      0   \n",
+      "2725     -0.368811    -0.632742        2.842675  ...    0      0   \n",
+      "\n",
+      "      Software Training  Simulation  Game Development  Massively Multiplayer  \\\n",
+      "0                     0           0                 0                      0   \n",
+      "815                   0           1                 0                      0   \n",
+      "2093                  0           0                 0                      1   \n",
+      "2187                  0           1                 0                      0   \n",
+      "2725                  0           0                 0                      0   \n",
+      "\n",
+      "      Early Access  Nudity  Strategy  Violent  \n",
+      "0                0       0         0        0  \n",
+      "815              0       0         0        0  \n",
+      "2093             0       0         0        0  \n",
+      "2187             0       0         1        0  \n",
+      "2725             0       0         0        0  \n",
+      "\n",
+      "[5 rows x 50 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_19755/3791647812.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_19755/4009758692.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -276,21 +365,20 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaled_data = game_infos.copy()\n",
+    "\n",
+    "\n",
     "scale_cols = ['date_release','positive_ratio','user_reviews','price_final','price_original', 'required_age', 'achievements', 'positive_ratings', 'negative_ratings', \n",
     "              'average_playtime', 'median_playtime', 'owners', 'price',]\n",
     "# scale_cols = [col for col in scaled_data.columns if col not in no_scale_cols]\n",
-    "unique_values = ids['app_id'].unique()\n",
-    "print(unique_values)\n",
     "\n",
-    "index_positions = [ids[ids['app_id'] == value].index[0] for value in unique_values]\n",
     "\n",
     "scaled_data = game_infos.iloc[index_positions]\n",
     "\n",
     "# Scale the data\n",
     "scaler = StandardScaler()\n",
-    "scaled_data[scale_cols] = scaler.fit_transform(scaled_data[scale_cols])"
+    "scaled_data[scale_cols] = scaler.fit_transform(scaled_data[scale_cols])\n",
+    "\n",
+    "print(scaled_data.head())"
    ]
   },
   {
@@ -306,13 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "import joblib\n",
-    "\n",
     "knn = NearestNeighbors(n_neighbors=10, algorithm='brute', metric='cosine')\n",
     "knn.fit(scaled_data)\n",
     "\n",
@@ -321,39 +406,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(74, 3)\n",
-      "(74, 3)\n"
+      "              0             1             2\n",
+      "0  0.000000e+00  5.738877e-05  8.021221e-05\n",
+      "1  0.000000e+00  6.910418e-07  5.164527e-06\n",
+      "2  0.000000e+00  2.057032e-08  4.982731e-07\n",
+      "3  1.110223e-16  2.115668e-08  2.283684e-06\n",
+      "4  3.330669e-16  1.094936e-10  2.882450e-09\n",
+      "   0   1   2\n",
+      "0  0  72  31\n",
+      "1  1  25   6\n",
+      "2  2  41  31\n",
+      "3  3  26  22\n",
+      "4  4  49  38\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['./models/knn_indices.pkl']"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(distances.shape)\n",
-    "print(indices.shape)\n",
+    "# import joblib\n",
+    "print(pd.DataFrame(distances).head())\n",
+    "print(pd.DataFrame(indices).head())\n",
     "save_distances = pd.concat([pd.DataFrame(unique_values, columns=['app_id']), pd.DataFrame(distances)], axis=1)\n",
     "indices_mapping = pd.DataFrame(indices)\n",
     "indices_mapping = indices_mapping.applymap(lambda x: unique_values[x])\n",
     "save_indices = pd.concat([pd.DataFrame(unique_values, columns=['app_id']), indices_mapping], axis=1)\n",
     "\n",
-    "joblib.dump(knn, './models/knn_model.pkl')\n",
-    "joblib.dump(save_distances, './models/knn_distances.pkl')\n",
-    "joblib.dump(save_indices, './models/knn_indices.pkl')"
+    "# joblib.dump(knn, './models/knn_model.pkl')\n",
+    "# joblib.dump(save_distances, './models/knn_distances.pkl')\n",
+    "# joblib.dump(save_indices, './models/knn_indices.pkl')"
    ]
   },
   {
@@ -365,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -395,8 +481,10 @@
    ],
    "source": [
     "# Load the trained model\n",
-    "loaded_distances = pd.DataFrame(joblib.load('./models/knn_distances.pkl'))\n",
-    "loaded_indices = pd.DataFrame(joblib.load('./models/knn_indices.pkl'))\n",
+    "# loaded_distances = pd.DataFrame(joblib.load('./models/knn_distances.pkl'))\n",
+    "# loaded_indices = pd.DataFrame(joblib.load('./models/knn_indices.pkl'))\n",
+    "loaded_distances = pd.DataFrame(save_distances.copy())\n",
+    "loaded_indices = pd.DataFrame(save_indices.copy())\n",
     "\n",
     "title = pd.read_csv('../datasets/preprocessed_games.csv')\n",
     "title = title[['app_id', 'title']]\n",
@@ -409,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +594,7 @@
        "4  552520       67     12  1601942400               1  301.5   5432359"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,14 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_19755/1483927302.py:3: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_19755/1312430439.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  user_game_count = pd.DataFrame(data.groupby('user_id')['user_id', 'app_id'].count())\n"
      ]
     },
@@ -545,7 +633,7 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "\n",
     "user_game_count = pd.DataFrame(data.groupby('user_id')['user_id', 'app_id'].count())\n",
     "# print(user_game_count[user_game_count['user_id'] > 10].shape)\n",
@@ -601,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,6 +718,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   user_id  app_id                            title      distance\n",
+      "9  7606333  306130        The Elder Scrolls® Online  6.147283e-08\n",
+      "6  7606333  381210                 Dead by Daylight  1.972394e-07\n",
+      "2  7606333  413150                   Stardew Valley  3.325829e-07\n",
+      "7  7606333  284160                     BeamNG.drive  3.946931e-07\n",
+      "3  7606333  359550  Tom Clancy's Rainbow Six® Siege  6.395513e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(recommend(7606333))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -643,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -673,21 +783,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average_precision: 0.044932671863926514\n",
-      "average_recall: 0.0777699031419795\n",
-      "HitRate: 0.21100917431192662\n"
+      "average_precision: 0.04815994338287355\n",
+      "average_recall: 0.08205944798301466\n",
+      "HitRate: 0.2180663373323924\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
     "\n",
     "\n",
     "all_precisions = []\n",
