ADD: LogisticRegression model

--- a/src/SVD.ipynb
+++ b/src/SVD.ipynb
@@ -484,7 +484,7 @@
     }
    ],
    "source": [
-    "user_item_matrix = games_df.pivot_table(index='title', columns='user_id', aggfunc=lambda x: 1, fill_value=0)\n",
+    "user_item_matrix = games_df.pivot_table(index='user_id', columns='app_id', values='is_recommended', aggfunc='max', fill_value=0)\n",
     "user_item_matrix.columns = user_item_matrix.columns.get_level_values(1)\n",
     "user_item_matrix.fillna(0, inplace=True)\n",
     "user_item_matrix.head(5)"
