--- a/src/content_based.ipynb
+++ b/src/content_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_45054/2261567727.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_96344/2261567727.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_45054/3179602805.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_96344/3179602805.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,8 +270,8 @@
      "output_type": "stream",
      "text": [
       "10 Games Recommend to 7606333 : \n",
-      "['Mount & Blade: Warband', 'Left 4 Dead 2', 'The Forest', 'Bloons TD 6', 'ARK: Survival Evolved']\n",
-      "['World of Tanks Blitz', 'Project Zomboid', 'War Thunder', 'Team Fortress 2', 'Raft']\n"
+      "['Tomb Raider', 'The Forest', 'Brawlhalla', '7 Days to Die', \"Tom Clancy's Rainbow Six® Siege\"]\n",
+      "['Team Fortress 2', 'Dead by Daylight', 'Sekiro™: Shadows Die Twice - GOTY Edition', 'PAYDAY 2', 'DARK SOULS™ III']\n"
      ]
     }
    ],
@@ -342,9 +342,9 @@
      "text": [
       "(41908, 59)\n",
       "(4457, 59)\n",
-      "average_precision: 0.04854712969525188\n",
-      "average_recall: 0.168040228139449\n",
-      "HitRate: 0.4050811573747354\n"
+      "average_precision: 0.04865439093484444\n",
+      "average_recall: 0.1661203291514913\n",
+      "HitRate: 0.41213832039520115\n"
      ]
     }
    ],
