--- a/src/item_based.ipynb
+++ b/src/item_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,16 +53,16 @@
        "      <th>user_reviews</th>\n",
        "      <th>price_final</th>\n",
        "      <th>...</th>\n",
-       "      <th>RPG</th>\n",
-       "      <th>Indie</th>\n",
-       "      <th>Software Training</th>\n",
-       "      <th>Simulation</th>\n",
-       "      <th>Game Development</th>\n",
-       "      <th>Massively Multiplayer</th>\n",
+       "      <th>Video Production</th>\n",
+       "      <th>Accounting</th>\n",
+       "      <th>Design &amp; Illustration</th>\n",
        "      <th>Early Access</th>\n",
+       "      <th>Audio Production</th>\n",
+       "      <th>Utilities</th>\n",
        "      <th>Nudity</th>\n",
-       "      <th>Strategy</th>\n",
-       "      <th>Violent</th>\n",
+       "      <th>Software Training</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Photo Editing</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -87,7 +87,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -111,7 +111,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -135,7 +135,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -159,7 +159,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -183,7 +183,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -199,31 +199,31 @@
        "3  552520  Far Cry® 5   2018-03-26    1    0      0       7              80   \n",
        "4  552520  Far Cry® 5   2018-03-26    1    0      0       7              80   \n",
        "\n",
-       "   user_reviews  price_final  ...  RPG  Indie  Software Training  Simulation  \\\n",
-       "0        129943         60.0  ...    0      0                  0           0   \n",
-       "1        129943         60.0  ...    0      0                  0           0   \n",
-       "2        129943         60.0  ...    0      0                  0           0   \n",
-       "3        129943         60.0  ...    0      0                  0           0   \n",
-       "4        129943         60.0  ...    0      0                  0           0   \n",
+       "   user_reviews  price_final  ...  Video Production  Accounting  \\\n",
+       "0        129943         60.0  ...                 0           0   \n",
+       "1        129943         60.0  ...                 0           0   \n",
+       "2        129943         60.0  ...                 0           0   \n",
+       "3        129943         60.0  ...                 0           0   \n",
+       "4        129943         60.0  ...                 0           0   \n",
        "\n",
-       "   Game Development Massively Multiplayer  Early Access  Nudity  Strategy  \\\n",
-       "0                 0                     0             0       0         0   \n",
-       "1                 0                     0             0       0         0   \n",
-       "2                 0                     0             0       0         0   \n",
-       "3                 0                     0             0       0         0   \n",
-       "4                 0                     0             0       0         0   \n",
+       "   Design & Illustration  Early Access  Audio Production Utilities  Nudity  \\\n",
+       "0                      0             0                 0         0       0   \n",
+       "1                      0             0                 0         0       0   \n",
+       "2                      0             0                 0         0       0   \n",
+       "3                      0             0                 0         0       0   \n",
+       "4                      0             0                 0         0       0   \n",
        "\n",
-       "   Violent  \n",
-       "0        0  \n",
-       "1        0  \n",
-       "2        0  \n",
-       "3        0  \n",
-       "4        0  \n",
+       "   Software Training  Action  Photo Editing  \n",
+       "0                  0       1              0  \n",
+       "1                  0       1              0  \n",
+       "2                  0       1              0  \n",
+       "3                  0       1              0  \n",
+       "4                  0       1              0  \n",
        "\n",
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "[5 rows x 281295 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "[74 rows x 74 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        " 'Risk of Rain 2']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "'Yes, user might like this game based on their preferences.'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1205,9 +1205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_precision: 0.06520198440822163\n",
+      "average_recall: 0.11290034085923528\n",
+      "HitRate: 0.3048694424841214\n"
+     ]
+    }
+   ],
    "source": [
     "all_precisions = []\n",
     "all_recalls = []\n",
